PreProcess/micfort.GMDroid.PF/Monster/PFParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/michiel/TabletopWitch/src/PreProcess/micfort.GMDroid.PF/Monster/PF.g4 by ANTLR 4.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.3")]
[System.CLSCompliant(false)]
public partial class PFParser : Parser {
	public const int
		T__39=1, T__38=2, T__37=3, T__36=4, T__35=5, T__34=6, T__33=7, T__32=8, 
		T__31=9, T__30=10, T__29=11, T__28=12, T__27=13, T__26=14, T__25=15, T__24=16, 
		T__23=17, T__22=18, T__21=19, T__20=20, T__19=21, T__18=22, T__17=23, 
		T__16=24, T__15=25, T__14=26, T__13=27, T__12=28, T__11=29, T__10=30, 
		T__9=31, T__8=32, T__7=33, T__6=34, T__5=35, T__4=36, T__3=37, T__2=38, 
		T__1=39, T__0=40, STRING=41, NUMBER=42, SPECIALSYMBOLS=43, NEWLINE=44, 
		SEP=45, QUOTE=46, DOUBLEQUOTE=47, WS=48;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'Medium'", "'AC '", "'LE'", "'each'", "'-'", "'('", "'LN'", 
		"'d'", "'LG'", "' each'", "'N'", "' HD'", "' '", "'Gargantuan'", "'CN'", 
		"' ft'", "'NG'", "'HD'", "', Ref '", "', '", "'M'", "'CE'", "' touch '", 
		"'NULL'", "')'", "'.'", "'+'", "'Diminutive'", "';'", "'CG'", "'Fort '", 
		"'Colossal'", "' flat-footed '", "', Will '", "'Large'", "'/'", "'NE'", 
		"'Huge'", "'Small'", "'Tiny'", "STRING", "NUMBER", "SPECIALSYMBOLS", "NEWLINE", 
		"','", "'\"'", "'\"\"'", "WS"
	};
	public const int
		RULE_pf = 0, RULE_header = 1, RULE_line = 2, RULE_cell = 3, RULE_text = 4, 
		RULE_quotedText = 5, RULE_posNegNumber = 6, RULE_monster = 7, RULE_nameCell = 8, 
		RULE_crCell = 9, RULE_cr = 10, RULE_xpCell = 11, RULE_raceCell = 12, RULE_mclassCell = 13, 
		RULE_mclass = 14, RULE_mclassName = 15, RULE_monstersourceCell = 16, RULE_alignmentCell = 17, 
		RULE_sizeCell = 18, RULE_typeCell = 19, RULE_subtypeCell = 20, RULE_initCell = 21, 
		RULE_init = 22, RULE_sensesCell = 23, RULE_senses = 24, RULE_sense = 25, 
		RULE_auraCell = 26, RULE_acCell = 27, RULE_armorClass = 28, RULE_armorClassTouch = 29, 
		RULE_armorClassFlatFooted = 30, RULE_ac_modsCell = 31, RULE_ac_mods = 32, 
		RULE_ac_mod = 33, RULE_ac_modSpecial = 34, RULE_hpCell = 35, RULE_hdCell = 36, 
		RULE_hd = 37, RULE_hp_modsCell = 38, RULE_savesCell = 39, RULE_saves = 40, 
		RULE_savesFort = 41, RULE_savesRef = 42, RULE_savesWill = 43, RULE_fortCell = 44, 
		RULE_refCell = 45, RULE_willCell = 46, RULE_save_modsCell = 47, RULE_defensiveabilitiesCell = 48, 
		RULE_drCell = 49, RULE_drList = 50, RULE_dr = 51, RULE_immuneCell = 52, 
		RULE_immuneList = 53, RULE_immune = 54, RULE_resistCell = 55, RULE_restistList = 56, 
		RULE_resist = 57, RULE_srCell = 58, RULE_weaknessesCell = 59, RULE_speedCell = 60, 
		RULE_speed_modCell = 61, RULE_meleeCell = 62, RULE_rangedCell = 63, RULE_spaceCell = 64, 
		RULE_reachCell = 65, RULE_specialattacksCell = 66, RULE_spelllikeabilitiesCell = 67, 
		RULE_spellsknownCell = 68, RULE_spellspreparedCell = 69, RULE_spelldomainsCell = 70, 
		RULE_abilityscoresCell = 71, RULE_abilityscore_modsCell = 72, RULE_baseatkCell = 73, 
		RULE_cmbCell = 74, RULE_cmdCell = 75, RULE_featsCell = 76, RULE_skillsCell = 77, 
		RULE_skills = 78, RULE_racialmodsCell = 79, RULE_languagesCell = 80, RULE_sqCell = 81, 
		RULE_environmentCell = 82, RULE_organizationCell = 83, RULE_treasureCell = 84, 
		RULE_description_visualCell = 85, RULE_groupCell = 86, RULE_sourceCell = 87, 
		RULE_istemplateCell = 88, RULE_specialabilitiesCell = 89, RULE_descriptionCell = 90, 
		RULE_fulltextCell = 91, RULE_genderCell = 92, RULE_bloodlineCell = 93, 
		RULE_prohibitedschoolsCell = 94, RULE_beforecombatCell = 95, RULE_duringcombatCell = 96, 
		RULE_moraleCell = 97, RULE_gearCell = 98, RULE_othergearCell = 99, RULE_vulnerabilityCell = 100, 
		RULE_noteCell = 101, RULE_characterflagCell = 102, RULE_companionflagCell = 103, 
		RULE_flyCell = 104, RULE_climbCell = 105, RULE_burrowCell = 106, RULE_swimCell = 107, 
		RULE_landCell = 108, RULE_templatesappliedCell = 109, RULE_offensenoteCell = 110, 
		RULE_basestatisticsCell = 111, RULE_extractspreparedCell = 112, RULE_agecategoryCell = 113, 
		RULE_mysteryCell = 114, RULE_classarchetypesCell = 115, RULE_patronCell = 116, 
		RULE_companionfamiliarlinkCell = 117, RULE_focusedschoolCell = 118, RULE_traitsCell = 119, 
		RULE_alternatenameformCell = 120, RULE_linktextCell = 121, RULE_idCell = 122, 
		RULE_uniquemonsterCell = 123, RULE_thassilonianspecializationCell = 124, 
		RULE_variantCell = 125, RULE_mrCell = 126, RULE_mythicCell = 127, RULE_mtCell = 128, 
		RULE_skill = 129, RULE_skillName = 130, RULE_skillSpecial = 131, RULE_distance = 132, 
		RULE_name = 133, RULE_dices = 134, RULE_dice = 135, RULE_diceSides = 136, 
		RULE_diceCount = 137, RULE_modifier = 138;
	public static readonly string[] ruleNames = {
		"pf", "header", "line", "cell", "text", "quotedText", "posNegNumber", 
		"monster", "nameCell", "crCell", "cr", "xpCell", "raceCell", "mclassCell", 
		"mclass", "mclassName", "monstersourceCell", "alignmentCell", "sizeCell", 
		"typeCell", "subtypeCell", "initCell", "init", "sensesCell", "senses", 
		"sense", "auraCell", "acCell", "armorClass", "armorClassTouch", "armorClassFlatFooted", 
		"ac_modsCell", "ac_mods", "ac_mod", "ac_modSpecial", "hpCell", "hdCell", 
		"hd", "hp_modsCell", "savesCell", "saves", "savesFort", "savesRef", "savesWill", 
		"fortCell", "refCell", "willCell", "save_modsCell", "defensiveabilitiesCell", 
		"drCell", "drList", "dr", "immuneCell", "immuneList", "immune", "resistCell", 
		"restistList", "resist", "srCell", "weaknessesCell", "speedCell", "speed_modCell", 
		"meleeCell", "rangedCell", "spaceCell", "reachCell", "specialattacksCell", 
		"spelllikeabilitiesCell", "spellsknownCell", "spellspreparedCell", "spelldomainsCell", 
		"abilityscoresCell", "abilityscore_modsCell", "baseatkCell", "cmbCell", 
		"cmdCell", "featsCell", "skillsCell", "skills", "racialmodsCell", "languagesCell", 
		"sqCell", "environmentCell", "organizationCell", "treasureCell", "description_visualCell", 
		"groupCell", "sourceCell", "istemplateCell", "specialabilitiesCell", "descriptionCell", 
		"fulltextCell", "genderCell", "bloodlineCell", "prohibitedschoolsCell", 
		"beforecombatCell", "duringcombatCell", "moraleCell", "gearCell", "othergearCell", 
		"vulnerabilityCell", "noteCell", "characterflagCell", "companionflagCell", 
		"flyCell", "climbCell", "burrowCell", "swimCell", "landCell", "templatesappliedCell", 
		"offensenoteCell", "basestatisticsCell", "extractspreparedCell", "agecategoryCell", 
		"mysteryCell", "classarchetypesCell", "patronCell", "companionfamiliarlinkCell", 
		"focusedschoolCell", "traitsCell", "alternatenameformCell", "linktextCell", 
		"idCell", "uniquemonsterCell", "thassilonianspecializationCell", "variantCell", 
		"mrCell", "mythicCell", "mtCell", "skill", "skillName", "skillSpecial", 
		"distance", "name", "dices", "dice", "diceSides", "diceCount", "modifier"
	};

	public override string GrammarFileName { get { return "PF.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public PFParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class PfContext : ParserRuleContext {
		public MonsterContext monster(int i) {
			return GetRuleContext<MonsterContext>(i);
		}
		public IReadOnlyList<MonsterContext> monster() {
			return GetRuleContexts<MonsterContext>();
		}
		public HeaderContext header() {
			return GetRuleContext<HeaderContext>(0);
		}
		public PfContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pf; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPFListener typedListener = listener as IPFListener;
			if (typedListener != null) typedListener.EnterPf(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPFListener typedListener = listener as IPFListener;
			if (typedListener != null) typedListener.ExitPf(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPFVisitor<TResult> typedVisitor = visitor as IPFVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPf(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PfContext pf() {
		PfContext _localctx = new PfContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_pf);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 278; header();
			State = 280;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 279; monster();
				}
				}
				State = 282;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__39) | (1L << T__38) | (1L << T__37) | (1L << T__36) | (1L << T__35) | (1L << T__34) | (1L << T__33) | (1L << T__32) | (1L << T__31) | (1L << T__30) | (1L << T__29) | (1L << T__28) | (1L << T__27) | (1L << T__26) | (1L << T__25) | (1L << T__24) | (1L << T__23) | (1L << T__22) | (1L << T__21) | (1L << T__20) | (1L << T__19) | (1L << T__18) | (1L << T__17) | (1L << T__16) | (1L << T__15) | (1L << T__14) | (1L << T__13) | (1L << T__12) | (1L << T__11) | (1L << T__10) | (1L << T__9) | (1L << T__8) | (1L << T__7) | (1L << T__6) | (1L << T__5) | (1L << T__4) | (1L << T__3) | (1L << T__2) | (1L << T__1) | (1L << T__0) | (1L << STRING) | (1L << NUMBER) | (1L << SPECIALSYMBOLS) | (1L << NEWLINE) | (1L << SEP) | (1L << QUOTE) | (1L << DOUBLEQUOTE) | (1L << WS))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HeaderContext : ParserRuleContext {
		public LineContext line() {
			return GetRuleContext<LineContext>(0);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_header; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPFListener typedListener = listener as IPFListener;
			if (typedListener != null) typedListener.EnterHeader(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPFListener typedListener = listener as IPFListener;
			if (typedListener != null) typedListener.ExitHeader(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPFVisitor<TResult> typedVisitor = visitor as IPFVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHeader(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public HeaderContext header() {
		HeaderContext _localctx = new HeaderContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_header);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 284; line();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		public ITerminalNode NEWLINE() { return GetToken(PFParser.NEWLINE, 0); }
		public CellContext cell(int i) {
			return GetRuleContext<CellContext>(i);
		}
		public ITerminalNode SEP(int i) {
			return GetToken(PFParser.SEP, i);
		}
		public IReadOnlyList<ITerminalNode> SEP() { return GetTokens(PFParser.SEP); }
		public IReadOnlyList<CellContext> cell() {
			return GetRuleContexts<CellContext>();
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPFListener typedListener = listener as IPFListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPFListener typedListener = listener as IPFListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPFVisitor<TResult> typedVisitor = visitor as IPFVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_line);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 286; cell();
			State = 291;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==SEP) {
				{
				{
				State = 287; Match(SEP);
				State = 288; cell();
				}
				}
				State = 293;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 294; Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CellContext : ParserRuleContext {
		public TextContext text() {
			return GetRuleContext<TextContext>(0);
		}
		public ITerminalNode QUOTE(int i) {
			return GetToken(PFParser.QUOTE, i);
		}
		public IReadOnlyList<ITerminalNode> QUOTE() { return GetTokens(PFParser.QUOTE); }
		public QuotedTextContext quotedText() {
			return GetRuleContext<QuotedTextContext>(0);
		}
		public CellContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cell; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPFListener typedListener = listener as IPFListener;
			if (typedListener != null) typedListener.EnterCell(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPFListener typedListener = listener as IPFListener;
			if (typedListener != null) typedListener.ExitCell(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPFVisitor<TResult> typedVisitor = visitor as IPFVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCell(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CellContext cell() {
		CellContext _localctx = new CellContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_cell);
		try {
			State = 302;
			switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 296; Match(QUOTE);
				State = 297; quotedText();
				State = 298; Match(QUOTE);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 300; text();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TextContext : ParserRuleContext {
		public IReadOnlyList<ITerminalNode> NEWLINE() { return GetTokens(PFParser.NEWLINE); }
		public ITerminalNode QUOTE(int i) {
			return GetToken(PFParser.QUOTE, i);
		}
		public ITerminalNode NEWLINE(int i) {
			return GetToken(PFParser.NEWLINE, i);
		}
		public IReadOnlyList<ITerminalNode> QUOTE() { return GetTokens(PFParser.QUOTE); }
		public ITerminalNode SEP(int i) {
			return GetToken(PFParser.SEP, i);
		}
		public IReadOnlyList<ITerminalNode> SEP() { return GetTokens(PFParser.SEP); }
		public TextContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_text; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPFListener typedListener = listener as IPFListener;
			if (typedListener != null) typedListener.EnterText(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPFListener typedListener = listener as IPFListener;
			if (typedListener != null) typedListener.ExitText(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPFVisitor<TResult> typedVisitor = visitor as IPFVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitText(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TextContext text() {
		TextContext _localctx = new TextContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_text);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 307;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 304;
					_la = _input.La(1);
					if ( _la <= 0 || ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NEWLINE) | (1L << SEP) | (1L << QUOTE))) != 0)) ) {
					_errHandler.RecoverInline(this);
					}
					Consume();
					}
					} 
				}
				State = 309;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QuotedTextContext : ParserRuleContext {
		public IReadOnlyList<ITerminalNode> NEWLINE() { return GetTokens(PFParser.NEWLINE); }
		public ITerminalNode QUOTE(int i) {
			return GetToken(PFParser.QUOTE, i);
		}
		public ITerminalNode NEWLINE(int i) {
			return GetToken(PFParser.NEWLINE, i);
		}
		public IReadOnlyList<ITerminalNode> QUOTE() { return GetTokens(PFParser.QUOTE); }
		public QuotedTextContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_quotedText; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPFListener typedListener = listener as IPFListener;
			if (typedListener != null) typedListener.EnterQuotedText(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPFListener typedListener = listener as IPFListener;
			if (typedListener != null) typedListener.ExitQuotedText(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPFVisitor<TResult> typedVisitor = visitor as IPFVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQuotedText(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QuotedTextContext quotedText() {
		QuotedTextContext _localctx = new QuotedTextContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_quotedText);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 313;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__39) | (1L << T__38) | (1L << T__37) | (1L << T__36) | (1L << T__35) | (1L << T__34) | (1L << T__33) | (1L << T__32) | (1L << T__31) | (1L << T__30) | (1L << T__29) | (1L << T__28) | (1L << T__27) | (1L << T__26) | (1L << T__25) | (1L << T__24) | (1L << T__23) | (1L << T__22) | (1L << T__21) | (1L << T__20) | (1L << T__19) | (1L << T__18) | (1L << T__17) | (1L << T__16) | (1L << T__15) | (1L << T__14) | (1L << T__13) | (1L << T__12) | (1L << T__11) | (1L << T__10) | (1L << T__9) | (1L << T__8) | (1L << T__7) | (1L << T__6) | (1L << T__5) | (1L << T__4) | (1L << T__3) | (1L << T__2) | (1L << T__1) | (1L << T__0) | (1L << STRING) | (1L << NUMBER) | (1L << SPECIALSYMBOLS) | (1L << SEP) | (1L << DOUBLEQUOTE) | (1L << WS))) != 0)) {
				{
				{
				State = 310;
				_la = _input.La(1);
				if ( _la <= 0 || (_la==NEWLINE || _la==QUOTE) ) {
				_errHandler.RecoverInline(this);
				}
				Consume();
				}
				}
				State = 315;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PosNegNumberContext : ParserRuleContext {
		public ITerminalNode NUMBER() { return GetToken(PFParser.NUMBER, 0); }
		public PosNegNumberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_posNegNumber; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPFListener typedListener = listener as IPFListener;
			if (typedListener != null) typedListener.EnterPosNegNumber(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPFListener typedListener = listener as IPFListener;
			if (typedListener != null) typedListener.ExitPosNegNumber(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPFVisitor<TResult> typedVisitor = visitor as IPFVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPosNegNumber(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PosNegNumberContext posNegNumber() {
		PosNegNumberContext _localctx = new PosNegNumberContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_posNegNumber);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 317;
			_la = _input.La(1);
			if (_la==T__35 || _la==T__13) {
				{
				State = 316;
				_la = _input.La(1);
				if ( !(_la==T__35 || _la==T__13) ) {
				_errHandler.RecoverInline(this);
				}
				Consume();
				}
			}

			State = 319; Match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
